--- a/Server/elasticsearch/docker-compose.yml
+++ b/Server/elasticsearch/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     environment:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      - xpack.security.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - xpack.security.http.ssl.enabled=false
     ports:
       - "9200:9200"
     volumes:
